Update API_URL for production deployment

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <script>
     // 🔴 CHANGE THIS AFTER VERCEL DEPLOY
-    const API_URL = "https://YOUR-VERCEL-PROJECT.vercel.app/api/generate";
+    const API_URL = "https://emoji-comfort-git-main-aikoios-projects.vercel.app";
 
     async function generateQuote() {
       const emoji = document.getElementById("emojiInput").value.trim();
