--- a/index.html
+++ b/index.html
@@ -6,31 +6,74 @@
   <title>Emoji Comfort</title>
   <style>
     body {
-      font-family: sans-serif;
-      background: #f0f8ff;
+      font-family: 'Helvetica', sans-serif;
+      background: linear-gradient(135deg, #c3eafc, #fef9e7);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      margin: 0;
       padding: 20px;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #333;
     }
     input {
       font-size: 2rem;
-      padding: 10px;
+      padding: 15px;
       width: 80%;
+      max-width: 300px;
       text-align: center;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     button {
-      margin-top: 10px;
-      padding: 10px 20px;
+      margin-top: 15px;
+      padding: 12px 25px;
       font-size: 1rem;
+      background-color: #6bc5e8;
+      color: #fff;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: 0.3s;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+    }
+    button:hover {
+      background-color: #4aa7d6;
     }
     #quote {
-      margin-top: 20px;
+      margin-top: 25px;
       font-size: 1.2rem;
       text-align: center;
-      min-height: 50px;
+      min-height: 60px;
+      color: #444;
+      padding: 0 10px;
+    }
+    #spinner {
+      display: none;
+      margin-top: 20px;
+      width: 40px;
+      height: 40px;
+      border: 5px solid #c3eafc;
+      border-top: 5px solid #6bc5e8;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg);}
+      100% { transform: rotate(360deg);}
+    }
+    #watermark {
+      position: fixed;
+      bottom: 10px;
+      font-size: 0.8rem;
+      color: white;
+      opacity: 0.7;
     }
   </style>
 </head>
@@ -38,24 +81,28 @@
   <h1>Emoji Comfort</h1>
   <input id="emojiInput" type="text" placeholder="Enter an emoji" />
   <button id="generateBtn">Generate Quote</button>
+
+  <div id="spinner"></div>
   <div id="quote"></div>
+  <div id="watermark">Made by Dwayne</div>
 
   <script>
     const emojiInput = document.getElementById('emojiInput');
     const generateBtn = document.getElementById('generateBtn');
     const quoteBox = document.getElementById('quote');
+    const spinner = document.getElementById('spinner');
 
     generateBtn.addEventListener('click', () => {
       const emoji = emojiInput.value.trim();
       if (!emoji) return;
 
-      quoteBox.textContent = "Generating...";
+      // Show spinner
+      spinner.style.display = "block";
+      quoteBox.textContent = "";
 
       fetch("/api/generate", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
+        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ emoji })
       })
       .then(async res => {
@@ -69,6 +116,10 @@
       .catch(err => {
         console.error(err);
         quoteBox.textContent = "Error generating quote.";
+      })
+      .finally(() => {
+        // Hide spinner
+        spinner.style.display = "none";
       });
     });
   </script>
