--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emoji Comfort</title>
   <style>
+    /* Body & Layout */
     body {
       font-family: 'Helvetica', sans-serif;
       background: linear-gradient(135deg, #c3eafc, #fef9e7);
@@ -16,11 +17,14 @@
       margin: 0;
       padding: 20px;
     }
+
     h1 {
       font-size: 2rem;
       margin-bottom: 20px;
       color: #333;
     }
+
+    /* Input & Button */
     input {
       font-size: 2rem;
       padding: 15px;
@@ -31,6 +35,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
+
     button {
       margin-top: 15px;
       padding: 12px 25px;
@@ -43,9 +48,12 @@
       transition: 0.3s;
       box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
+
     button:hover {
       background-color: #4aa7d6;
     }
+
+    /* Quote display */
     #quote {
       margin-top: 25px;
       font-size: 1.2rem;
@@ -54,6 +62,8 @@
       color: #444;
       padding: 0 10px;
     }
+
+    /* Spinner */
     #spinner {
       display: none;
       margin-top: 20px;
@@ -64,16 +74,32 @@
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
+
     @keyframes spin {
       0% { transform: rotate(0deg);}
       100% { transform: rotate(360deg);}
     }
+
+    /* Watermark */
     #watermark {
       position: fixed;
       bottom: 10px;
-      font-size: 0.8rem;
-      color: white;
-      opacity: 0.7;
+      right: 10px;
+      font-size: 0.9rem;
+      color: rgba(255, 255, 255, 0.9);
+      font-weight: bold;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+      animation: fadeIn 2s ease-in-out, pulse 2s infinite alternate;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(10px); }
+      100% { opacity: 0.9; transform: translateY(0); }
+    }
+
+    @keyframes pulse {
+      0% { transform: translateY(0) scale(1); }
+      100% { transform: translateY(0) scale(1.05); }
     }
   </style>
 </head>
@@ -118,7 +144,6 @@
         quoteBox.textContent = "Error generating quote.";
       })
       .finally(() => {
-        // Hide spinner
         spinner.style.display = "none";
       });
     });
